; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_teximage.c_gl_free_texture_image.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_teximage.c_gl_free_texture_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_texture_image = type { %struct.gl_texture_image* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_free_texture_image(%struct.gl_texture_image* %0) #0 {
  %2 = alloca %struct.gl_texture_image*, align 8
  store %struct.gl_texture_image* %0, %struct.gl_texture_image** %2, align 8
  %3 = load %struct.gl_texture_image*, %struct.gl_texture_image** %2, align 8
  %4 = getelementptr inbounds %struct.gl_texture_image, %struct.gl_texture_image* %3, i32 0, i32 0
  %5 = load %struct.gl_texture_image*, %struct.gl_texture_image** %4, align 8
  %6 = icmp ne %struct.gl_texture_image* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.gl_texture_image*, %struct.gl_texture_image** %2, align 8
  %9 = getelementptr inbounds %struct.gl_texture_image, %struct.gl_texture_image* %8, i32 0, i32 0
  %10 = load %struct.gl_texture_image*, %struct.gl_texture_image** %9, align 8
  %11 = call i32 @free(%struct.gl_texture_image* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.gl_texture_image*, %struct.gl_texture_image** %2, align 8
  %14 = call i32 @free(%struct.gl_texture_image* %13)
  ret void
}

declare dso_local i32 @free(%struct.gl_texture_image*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
